<resources>
    <string name="app_name">lab1</string>

    <!-- Lab 2 Strings -->
    <string name="sign_in">Sign in</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="signup">Sign up</string>
    <string name="sign_in_facebook">SIGN IN VIA FACEBOOK</string>
    <string name="forgot_password">Forgot password?</string>
</resources>