<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textSize="@dimen/text_large"
        android:layout_marginTop="@dimen/margin_basex4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="@dimen/margin_basex4"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="name@gmail.com"
        app:layout_constraintTop_toTopOf="@+id/tv_user_name"
        app:layout_constraintStart_toEndOf="@+id/tv_user_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="@dimen/margin_base"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="******"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@+id/tv_password"
        app:layout_constraintStart_toEndOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:padding="@dimen/margin_base"
        android:layout_marginTop="@dimen/margin_base"
        android:layout_marginRight="@dimen/margin_basex2"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toStartOf="@+id/btn_sign_in" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:padding="@dimen/margin_base"
        android:layout_marginTop="@dimen/margin_base"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_500"
        android:layout_marginTop="@dimen/margin_basex2"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

